kafka-flink-demo/kustomize/reefer-simulator/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaccine-reefer-simulator
  labels:
    app: vaccine-reefer-simulator
spec:
  selector:
    matchLabels:
      app: vaccine-reefer-simulator
  replicas: 1
  template:
    metadata:
      labels:
        app: vaccine-reefer-simulator
    spec:
      containers:
      - name: vaccine-reefer-simulator
        image: quay.io/ibmcase/vaccine-reefer-simulator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
        expose: true
        volumeMounts:
        - name: ca-crt
          mountPath: /app/certs
        livenessProbe:
          failureThreshold: 12
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 2
        monitoring:
          labels:
            k8s-app: vaccine-reefer-simulator
        pullPolicy: Always
        service:
          annotations:
            prometheus.io/scrape: "true"
          port: 8080
          type: NodePort
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
      volumes:
      - name: ca-crt
        secret:
          secretName: jb-kafka-cluster-ca-cert
