kafka-flink-demo/kustomize/reefer-simulator/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaccine-reefer-simulator
  labels:
    name: vaccine-reefer-simulator
    app: vaccine-reefer-simulator
spec:
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: vaccine-reefer-simulator
  type: ClusterIP
  sessionAffinity: None
